--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,20 @@
 .animate-scroll {
   animation: scroll 5s linear infinite;
 }
+
+
+@keyframes gradientFlow {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.animate-gradientFlow {
+  animation: gradientFlow 5s ease-in-out infinite;
+}
